# yarp-device-ethercat-cia402

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci_conda.yml  docs.yml
cmake/: AddYARPDevice.cmake
config/robot/template_1_motor/motion_control/: all_joint_mc.xml
device/CiA402MotionControl/: CMakeLists.txt  CiA402MotionControl.cpp  CiA402MotionControl.h
doc/: .gitignore  Doxyfile  build_docs.sh  check_encoder_calibration.md  custom.css  dual_encoder_handling.md  environment.yml  header.html  main.md  modes_and_setpoints.md  protocol_map.md
src/CiA402/: CMakeLists.txt
src/CiA402/include/CiA402/: EncoderSdoIndices.h  EthercatManager.h  TimeUtils.h
src/CiA402/src/: EthercatManager.cpp
utils/: CMakeLists.txt
utils/CheckEncoderCalibration/: CMakeLists.txt  README.md
utils/CheckEncoderCalibration/include/CheckEncoderCalibration/: CheckEncoderCalibration.h
utils/CheckEncoderCalibration/src/: CheckEncoderCalibration.cpp  main.cpp
utils/StoreHomePosition/: CMakeLists.txt  README.md
utils/StoreHomePosition/include/StoreHomePosition/: StoreHomePosition.h
utils/StoreHomePosition/src/: StoreHomePosition.cpp
